[gd_scene load_steps=24 format=2]

[ext_resource path="res://Entities/Player/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/Bullets/ForwardBlast.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Player/Bullets/ForwardBlastThird.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Player/Bullets/SideBlast.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Player/Bullets/FowardDisk.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Player/Powers/EMPBlast.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Player/Powerups/WeaponUp.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Player/Powerups/ShieldUp.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Player/PlayerShip.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/ShipShields.png" type="Texture" id=10]
[ext_resource path="res://Assets/Effects/WhitePixel.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sounds/Player/heroAttack2.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sounds/Player/heroEMP3.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sounds/Player/powerupGained.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sounds/Player/playerDeathStart.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sounds/Player/playerDeathEnd.wav" type="AudioStream" id=16]
[ext_resource path="res://Entities/Shared/Behaviors/ScreenWrap.gd" type="Script" id=17]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DeathNodes/DeathParticlesTangential:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathNodes/DeathParticlesLinearRed:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2.85 ),
"transitions": PoolRealArray( 0.00961834, 0.00961834 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathNodes/DeathParticlesLinearWhite:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 2.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.55, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.05, 0.05 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, -1 ), Vector2( 1, 1 ), Vector2( -1, -1 ), Vector2( 1, 1 ), Vector2( -0.5, -0.5 ), Vector2( 0.5, 0.5 ), Vector2( -0.5, -0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.5, -0.5 ), Vector2( -0.5, 0.5 ), Vector2( 0.5, -0.5 ), Vector2( -0.5, 0.5 ), Vector2( 0.5, -0.5 ), Vector2( -0.25, 0.25 ), Vector2( 0.25, -0.25 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Sounds/DeathFinish")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 1250 ), Vector2( 300, 800 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_accelerometer"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.514214, 0.681733 ), 0.0, 0.0, 0, 0, Vector2( 0.83798, 0.616 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
min_value = -1000.0
max_value = 1000.0
_data = [ Vector2( 0, 1 ), 0.0, -1442.47, 0, 0, Vector2( 1, 1000 ), 3466.61, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
min_value = -4.0
max_value = 4.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -1.16364 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 1 )
ForwardBlast = ExtResource( 2 )
ForwardBlastThird = ExtResource( 3 )
SideBlast = ExtResource( 4 )
ForwardDisk = ExtResource( 5 )
Power = ExtResource( 6 )
WeaponUp = ExtResource( 7 )
ShieldUp = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -1 )
texture = ExtResource( 9 )

[node name="ShipShields" type="Sprite" parent="Sprite"]
position = Vector2( 0, -3.5 )
texture = ExtResource( 10 )

[node name="ShipCollider" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -10.6925, -24.6982, -5.49849, -19.0073, 5.47676, -19.0073, 10.5353, -24.8337, 14.826, -21.4915, 17.3553, -14.8973, 18.8909, -7.58045, 21.2267, -3.00267, 34.1082, 10.1982, 25.6839, 18.5975, 10.4811, 10.5581, 7.66279, 10.6484, 7.61763, 16.0683, 5.26902, 18.2362, -5.29974, 18.2814, -7.55801, 16.0683, -7.64835, 10.5581, -10.9454, 10.4677, -25.4888, 18.6427, -33.9189, 10.3047, -21.1439, -3.21559, -19.4095, -8.03211, -17.5125, -14.8521, -14.7123, -21.3108 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="PowerTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.04

[node name="GunPositions" type="Node2D" parent="."]
editor/display_folded = true

[node name="GunLowerRight" type="Node2D" parent="GunPositions"]
position = Vector2( 21, -6 )
rotation = 0.785398

[node name="EMP" type="Node2D" parent="GunPositions"]
position = Vector2( 0, -32 )

[node name="GunMain" type="Node2D" parent="GunPositions"]
position = Vector2( 0, -20 )

[node name="GunLowerLeft" type="Node2D" parent="GunPositions"]
position = Vector2( -21, -6 )
rotation = -0.785398

[node name="GunRight" type="Node2D" parent="GunPositions"]
position = Vector2( 10, -24 )

[node name="GunLeft" type="Node2D" parent="GunPositions"]
position = Vector2( -10, -24 )

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Flash = SubResource( 2 )
anims/MoveFromBottom = SubResource( 3 )

[node name="ShieldFade" type="Tween" parent="."]

[node name="DeathNodes" type="Node2D" parent="."]
editor/display_folded = true

[node name="DeathParticlesLinearWhite" type="CPUParticles2D" parent="DeathNodes"]
emitting = false
amount = 50
lifetime = 1.5
explosiveness = 0.85
texture = ExtResource( 11 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 15 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.7
radial_accel = 20.0
scale_amount = 4.0
scale_amount_curve = SubResource( 4 )

[node name="DeathParticlesLinearRed" type="CPUParticles2D" parent="DeathNodes"]
emitting = false
amount = 50
lifetime = 1.5
explosiveness = 0.85
texture = ExtResource( 11 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 15 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.7
radial_accel = 200.0
scale_amount = 4.0
scale_amount_curve = SubResource( 4 )
color = Color( 1, 0, 0, 1 )

[node name="DeathParticlesTangential" type="CPUParticles2D" parent="DeathNodes"]
emitting = false
amount = 50
lifetime = 3.0
explosiveness = 1.0
texture = ExtResource( 11 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 15 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
radial_accel_curve = SubResource( 5 )
tangential_accel = 4.0
tangential_accel_curve = SubResource( 6 )
damping = 100.0
scale_amount = 4.0
scale_amount_curve = SubResource( 4 )
color = Color( 1, 0, 0, 1 )

[node name="RespawnTimer" type="Timer" parent="DeathNodes"]
one_shot = true

[node name="Sounds" type="Node2D" parent="."]
editor/display_folded = true

[node name="PlayerFire" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -35.0

[node name="EMP" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -12.0

[node name="PowerupGained" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -28.0

[node name="DeathStart" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
volume_db = -7.0

[node name="DeathFinish" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="ScreenWrap" type="Node2D" parent="."]
z_index = 110
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
[connection signal="animation_finished" from="PlayerAnimations" to="." method="_on_PlayerAnimations_animation_finished"]
[connection signal="timeout" from="DeathNodes/RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
